# CovidVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.csv
resources/: data.pl  sort.pl
src/: main.cpp
src/ButtonOptions/: ButtonOptions.hpp
src/Dataset/: Dataset.cpp  Dataset.hpp
src/Prolog/: Prolog.cpp  Prolog.hpp
src/StringUtils/: StringUtils.hpp
src/Structures/: List.hpp
src/Table/: Table.cpp  Table.hpp
src/Util/: DateUtils.cpp  DateUtils.hpp  StringUtils.cpp  StringUtils.hpp
src/Window/: Window.cpp  Window.hpp
